<resources>
    <string name="app_name">BMICalculator</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="weight">Weight(KG)</string>
    <string name="height">Height(M)</string>
    <string name="BMI">BMI  :</string>
    <string name="status">Status  :</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>

    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="error_input">Please input something</string>
    <string name="nothing"> </string>

</resources>
